--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,3 +4,22 @@ opacity = 0.9
 import = [
     "~/.config/alacritty/themes/themes/iterm.toml"
 ]
+
+[font]
+size = 12.0
+
+[font.bold]
+family = "SauceCodePro Nerd Font Mono"
+style = "Bold"
+
+[font.bold_italic]
+family = "SauceCodePro Nerd Font Mono"
+style = "Bold Italic"
+
+[font.italic]
+family = "SauceCodePro Nerd Font Mono"
+style = "Italic"
+
+[font.normal]
+style = "Regular"
+family = "SauceCodePro Nerd Font Mono"
