--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = [workspace 1 silent] $browser
-exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 2 silent] $terminal -e tmux
 exec-once = [workspace special:magic silent] alacritty --class pythonscratchpad -e ipython
 exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
