Switch to swaync

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -53,9 +53,10 @@ exec-once = [workspace special:magic silent] alacritty --class pythonscratchpad 
 exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
+#exec-once = hyprpanel
 exec-once = hyprpaper
 exec-once = copyq --start-server
-exec-once = dunst
+exec-once = swaync
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 
