--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -186,10 +186,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,ua
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:ctrl_space_toggle
     kb_rules =
 
     repeat_rate = 40
