nvim and tmux config updates

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -45,7 +45,7 @@ set -s escape-time 0
 #set -g @plugin 'tmux-plugins/tmux-open'
 #set -g @plugin 'thalesmello/tmux-copycat'
 
-source "/usr/lib/python3.13/site-packages/powerline/bindings/tmux/powerline.conf"
+source "/usr/share/powerline/bindings/tmux/powerline.conf"
 
 bind-key Space run -b 'tmux-autocomplete --theme=dark'
 
