Terminal font change, various updates

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -10,10 +10,10 @@ listener {
     on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
-listener {
-    timeout = 300                            # in seconds.
-    on-timeout = notify-send "The screen is about to lock"
-}
+# listener {
+#     timeout = 300                            # in seconds.
+#     on-timeout = notify-send "The screen is about to lock"
+# }
 
 # turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
 listener { 
