--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -6,20 +6,20 @@ import = [
 ]
 
 [font]
-size = 12.0
+size = 11.0
 
 [font.bold]
-family = "SauceCodePro Nerd Font Mono"
 style = "Bold"
+family = "JetBrainsMono Nerd Font Mono"
 
 [font.bold_italic]
-family = "SauceCodePro Nerd Font Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "SauceCodePro Nerd Font Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
 style = "Regular"
-family = "SauceCodePro Nerd Font Mono"
+family = "JetBrainsMono Nerd Font Mono"
